--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./frontend:.
+      - /var/lib/jenkins/workspace/5TWIN5-SkiStation/frontend:/usr/src/app
     environment:
       - NODE_ENV=development
     command: npm start
